--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script type="text/javascript" src="//script.opentracker.net/?site=newsite.com"></script>
+    <script type="text/javascript" src="//script.opentracker.net/?site=newsite.com" async></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
