add meta name author and link rel canonical

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="author" content="Jason Wee" />
     <meta name="theme-color" content="#712cf9" />
     <meta
       name="description"
@@ -25,6 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>WeeTech EPF Calculator</title>
+    <link rel="canonical" href="https://weetech-software.github.io/epf/" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
