--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Jason Wee" />
@@ -10,6 +10,12 @@
       name="description"
       content="Malaysia EPF calculator made by WeeTech"
     />
+    <meta name="title" content="WeeTech EPF Calculator">
+    <meta name="keywords" content="WeeTech, software development, custom development, web development, professional, polygot, IT solutions, Malaysia EPF, KWSP, EPF calculator">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="7 days">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
