--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,22 @@
     -->
     <title>WeeTech EPF Calculator</title>
     <link rel="canonical" href="https://weetech-software.github.io/epf/" />
+
+    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+    <meta property="og:title" content="WeeTech EPF Calculator">
+    <meta property="og:description" content="WeeTech Software offers cutting-edge and professional custom software development services to your online business needs.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://weetech-software.github.io/epf/">
+    <meta property="og:image" content="https://www.weetech.ch/images/preview.jpg">
+    <meta property="og:site_name" content="WeeTech Software">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="WeeTech EPF Calculator">
+    <meta name="twitter:description" content="WeeTech Software offers cutting-edge and professional custom software development services to your online business needs.">
+    <meta name="twitter:image" content="https://www.weetech.ch/images/preview.jpg">
+    <meta name="twitter:site" content="@pc_wee">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
