--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#712cf9" />
     <meta
       name="description"
-      content="Malaysia EPF calculator made by WeeTech"
+      content="WeeTech Software provides cutting-edge custom software development services tailored to your online business needs, including EPF calculators for Malaysia."
     />
     <meta name="title" content="WeeTech EPF Calculator">
     <meta name="keywords" content="WeeTech, software development, custom development, web development, professional, polygot, IT solutions, Malaysia EPF, KWSP, EPF calculator">
